# tetris

./: pyproject.toml  run_workflow.py
core/: broker_client.py  worker.py  workflow_definition.py
libs/data_types/: platform.py
libs/schema/: collect_status.py  raw_transaction.py
libs/workflow_definitions/: queues.py
libs/workflow_definitions/collectors/: collect_workflow.py
libs/workflow_definitions/orchestrator/: collect_orchestration_workflow.py
microservices/collectors/: run.py
microservices/collectors/handlers/collect/: collect_workflow.py
microservices/collectors/handlers/collect/activities/: collect_activity.py
microservices/orchestrator/: run.py
microservices/orchestrator/handlers/collect_orchestration/: collect_orchestration_workflow.py
microservices/orchestrator/handlers/collect_orchestration/activities/: get_running_slots_activity.py  prepare_collect_activity.py
tests/: test_run_workflow.py
