[tool.poetry]
name = "temporal-project"
version = "0.1.0"
description = ""
authors = ["Asaf Ben Aharon <asafb26@gmail.com>"]
readme = "README.md"
packages = [{include = "temporal_project"}]

[tool.poetry.dependencies]
python = "^3.11"
temporalio = "^1.3.0"
pydantic = "^2.1.1"
beanie = "^1.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
